--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="lead-btn" id="i001i">Hover me
     </div>
   </div>
+  <script data-ad-client="ca-pub-1205037744203878" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </header>
 <section class="flex-sect">
   <div class="container-width">
